# video-editor

./: .gitmodules  CMakeLists.txt  README.md
lib/ffmpeg/include/libavutil/: ffversion.h
src/: main.cpp
